Complete responsiveness of blog webpage for submission. Note: It could be improved in the future adapting responsiveness for other ranges of mobile devices

--- a/src/index.html
+++ b/src/index.html
@@ -42,10 +42,10 @@
             </div>
             <!-- Welcome text -->
             <div class="welcome-text">
-                <h1>Welcome to my website! I'm Hernan, an adventurer always willing to dive where curiosity takes me. I'm currently growing 
+                <p>Welcome to my website! I'm Hernan, an adventurer always willing to dive where curiosity takes me. I'm currently growing 
                     my web development skills, but I also have a background in enginnering of bioprocesses, wastewater tratement, and biochemistry.
                     Lately, if I'm not learning about programming, I might be swimming, diving, cooking, planning a new trip or learning 
-                    how to build things with wooden.</h1>
+                    how to build things with wooden.</p>
             </div>
         </section>
     </main>
