--- a/src/pages/about.html
+++ b/src/pages/about.html
@@ -25,7 +25,7 @@
         <nav class="panel" id="nav-pages">
             <ul class="nav-list">
                 <!--Anchors to link buttons from nav bar to their respective website pages -->
-                <li><a href="../index.html" class="nav-link">Home</a></li>
+                <li><a href="../" class="nav-link">Home</a></li>
                 <li><a href="#" class="nav-link active">About</a></li>
                 <li><a href="../pages/blog.html" class="nav-link">Blog</a></li>
                 <li><a href="../pages/contact.html" class="nav-link">Contact</a></li>
@@ -33,15 +33,32 @@
         </nav>
     </header>
     <main>
-        <section>
-            <div class="description">
-            <p>Welcome to my website! I'm Hernan, an adventurer always willing to dive where curiosity takes me. I'm currently growing 
-                my web development skills, but I also have a background in enginnering of bioprocesses, wastewater tratement, biochemistry.
-                Lately, if I'm not learning about programming, I might be swimming, diving, cooking, planning a new trip or learning 
-                how to build things with wooden.
-            </p>
-            </div>
-                  </section>
+        <section class="experience">
+            <h2 class="experience-head">Education</h2>
+            <ul class="experience-list">
+                <li>2011 : Biological Engineering, Universidad Nacional de Colombia</li>
+                <li>2013 : Biochemistry and neurosciences (Diploma)</li>
+                <li>2024 : (Current) Full Stack Web Development Diploma</li>            
+            </ul>
+            <h2 class="experience-head">Professional Experience</h2>
+            <ul class="experience-list">
+                <li>Over 4 years experience specializing in site investigations, water management, and environmental management</li>
+                <li>Proven skilled in preparing contamination preliminary site investigations (PSI) and detailed site investigation (DSI) reports</li>
+                <li>Over 3 years experience in Australian logistics related to warehousing management</span></li>
+                <li>Significant experience in electronic data collection and processing skillset with Excel and Access, managing data flows, mechanical and electronic measuring tools</li>
+                <li>Strong organizational, analytical, and problem-solving skills demonstrated in a high-pressure environment</li>
+            </ul>
+            <h2 class="experience-head">Currently</h2>
+        </section>
+
+
+            <!-- Icon from FontAwesom that links to my resume -->
+            <!-- FIX THIS TO TAKE USER TO MY RESUME -->
+            <!-- <div class="resume">
+                <a href="../images/circuit-blog2.jpg" target="_blank"></a>
+                <i class="fa-solid fa-folder-open"></i>
+            </div> -->
+                 
     </main>
     <footer>
         <div class="social-media">
