Complete styling of about page with responsiveness for tablet and mobile phone

--- a/src/pages/about.html
+++ b/src/pages/about.html
@@ -33,32 +33,31 @@
         </nav>
     </header>
     <main>
-        <section class="experience">
-            <h2 class="experience-head">Education</h2>
-            <ul class="experience-list">
-                <li>2011 : Biological Engineering, Universidad Nacional de Colombia</li>
-                <li>2013 : Biochemistry and neurosciences (Diploma)</li>
-                <li>2024 : (Current) Full Stack Web Development Diploma</li>            
-            </ul>
-            <h2 class="experience-head">Professional Experience</h2>
-            <ul class="experience-list">
-                <li>Over 4 years experience specializing in site investigations, water management, and environmental management</li>
-                <li>Proven skilled in preparing contamination preliminary site investigations (PSI) and detailed site investigation (DSI) reports</li>
-                <li>Over 3 years experience in Australian logistics related to warehousing management</span></li>
-                <li>Significant experience in electronic data collection and processing skillset with Excel and Access, managing data flows, mechanical and electronic measuring tools</li>
-                <li>Strong organizational, analytical, and problem-solving skills demonstrated in a high-pressure environment</li>
-            </ul>
-            <h2 class="experience-head">Currently</h2>
-        </section>
-
-
-            <!-- Icon from FontAwesom that links to my resume -->
-            <!-- FIX THIS TO TAKE USER TO MY RESUME -->
-            <!-- <div class="resume">
-                <a href="../images/circuit-blog2.jpg" target="_blank"></a>
-                <i class="fa-solid fa-folder-open"></i>
-            </div> -->
-                 
+        <!-- Sections containing education and work experience as text-->
+            <section class="experience-edu">
+                <h2 class="experience-head">Education</h2>
+                <ul class="experience-list">
+                    <li>2011 : Biological Engineering, Universidad Nacional de Colombia</li>
+                    <li>2013 : Biochemistry and neurosciences (Diploma)</li>
+                    <li>2024 : (Current) Full Stack Web Development Diploma</li>
+                </ul>
+            </section>
+            <section class="experience-pro">
+                <h2 class="experience-head">Professional Experience</h2>
+                <ul class="experience-list">
+                    <li>Over 4 years experience specializing in site investigations, water management, and enviro management.</li>
+                    <li>Proven skilled in preparing contamination preliminary site investigations.</li>
+                    <li>Over 3 years experience in Australian logistics related to warehousing management.</span></li>
+                    <li>Significant experience in electronic data collection, MS Excel and MS Access, managing data flows.</li>
+                    <li>Strong organisational, analytical, and problem-solving skills demonstrated in a high-pressure environment.</li>
+                </ul>
+            </section>
+            <!-- Icon from FontAwesome that links to my resume -->
+            <div class="resume">
+                <a href="../../docs/Resume-Hernan Velasquez(22).pdf" target="_blank">
+                    <i class="fa-solid fa-folder-open">See more</i>
+                </a>
+            </div>           
     </main>
     <footer>
         <div class="social-media">
