Test4: fixing broken link for resume

--- a/src/pages/about.html
+++ b/src/pages/about.html
@@ -54,7 +54,7 @@
             </section>
             <!-- Icon from FontAwesome that links to my resume -->
             <div class="resume">
-                <a href="../../docs/Resume-HernanVelasquez(22).pdf" target="_blank">
+                <a href="../resources/Resume-HernanVelasquez(22).pdf" target="_blank">
                     <i class="fa-solid fa-folder-open">See more</i>
                 </a>
             </div>           
